--- a/manifest.json
+++ b/manifest.json
@@ -3,5 +3,9 @@
   "description": "Lookup book info at ISBNdb",
   "version": "0.0.1",
   "permissions": [ "contextMenus" ],
-  "background_page": "background.html"
+  "background_page": "background.html",
+  "browser_action": {
+    "default_title": "Search on ISBNdb",
+    "default_popup": "search.html"
+  }
 }
